//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message CrossChainAddrInfo {
  uint32    Purpose       = 1 ;    //
  uint32    CoinType      = 2 ;    //
  uint32    Account       = 3 ;    //
  uint32    Change        = 4 ;    //
  uint32    Index         = 5 ;    //
  string    AddrStr       = 6 ;    //
  bytes     AddrBs        = 7 ;    //
}

